have a good example and base for the computer

--- a/bubbly_byter_cc/Makefile
+++ b/bubbly_byter_cc/Makefile
@@ -7,8 +7,8 @@ OBJDUMP = $(ARCH)-objdump
 IDIR = inc
 SDIR = src
 BDIR = build
-CFLAGS = -Wall -g -I $(IDIR) -O0  -nolibc -nodefaultlibs -nostdlib -nostartfiles
-SFLAGS = -g -I $(IDIR)
+CFLAGS = -Wall  -I $(IDIR) -Oz  -nolibc -nodefaultlibs -nostdlib -nostartfiles -mcmodel=medany
+SFLAGS =  -I $(IDIR)
 S_SRCS = $(wildcard $(SDIR)/*.s)
 C_SRCS = $(wildcard $(SDIR)/*.c)
 S_OBJS = $(S_SRCS:$(SDIR)/%.s=$(BDIR)/%_asm.o)
@@ -19,7 +19,7 @@ all: clean $(BDIR)/kernel.img $(BDIR)/kernel.s
 $(BDIR)/kernel.img: $(BDIR)/kernel.elf
 	$(OBJCOPY) $< -O binary $@
 
-kernel.elf: $(S_OBJS) link.ld $(C_OBJS)
+$(BDIR)/kernel.elf: $(S_OBJS) link.ld $(C_OBJS)
 	$(LD) -T link.ld -o $@ $(S_OBJS) $(C_OBJS)
 
 $(BDIR)/kernel.s: $(BDIR)/kernel.elf
